--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/raj.png" alt="Raj's Profile Pic"></td>
+      <td><img src="Images/Raj.png" alt="Raj's Profile Pic"></td>
       <td>
         <h1>Raj Shankar</h1>
         <p><em>Owner of <b><a href="https://www.youtube.com/watch?v=HnS5AGf7bwk&t=8s">Reindeer Consulting</a></b></em><br><a href="https://www.linkedin.com/in/raj-shankar-740b812/">Linkedin Profile</a></p>
